[gd_scene load_steps=5 format=3 uid="uid://e8yay001w2v3"]

[ext_resource type="Script" path="res://src/GameUI.gd" id="1"]
[ext_resource type="Script" uid="uid://8jug2fw5gcqf" path="res://src/UserScoreLabel.gd" id="2"]
[ext_resource type="Script" uid="uid://bjjhjfwvl7vef" path="res://src/ExtinctionsLabel.gd" id="3"]
[ext_resource type="Script" uid="uid://dctvip0hgudr2" path="res://src/EpochLabel.gd" id="4"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="UserScoreLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 30.0
offset_right = 500.0
offset_bottom = 250.0
bbcode_enabled = true
text = "
Score
0
"
scroll_active = false
script = ExtResource("2")

[node name="ExtinctionsLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 30.0
offset_right = 250.0
offset_bottom = 180.0
bbcode_enabled = true
text = "
Extinctions
Left
3
"
scroll_active = false
script = ExtResource("3")

[node name="EpochLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 30.0
offset_right = 750.0
offset_bottom = 180.0
bbcode_enabled = true
text = "
Epoch
13.8B
"
scroll_active = false
script = ExtResource("4") 